--- a/index.html
+++ b/index.html
@@ -216,22 +216,22 @@
 
             <h2 class="mt-4 mb-4 text-center">Обратная связь</h2>
 
-            <form>
+            <form id="emailForm">
                 <div class="form-group col-md-6">
-                    <label for="emailForm">Ваша почта</label>
-                    <input type="email" class="form-control" id="emailForm" placeholder="name@example.com">
+                    <label for="emailInput">Ваша почта</label>
+                    <input type="email" class="form-control" id="emailInput" placeholder="name@example.com">
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="nameForm">Ваше имя</label>
-                    <input type="text" class="form-control" id="nameForm" placeholder="Имя">
+                    <label for="nameInput">Ваше имя</label>
+                    <input type="text" class="form-control" id="nameInput" placeholder="Имя">
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="subjectForm">Тема</label>
-                    <input type="text" class="form-control" id="subjectForm" placeholder="Тема">
+                    <label for="subjectInput">Тема</label>
+                    <input type="text" class="form-control" id="subjectInput" placeholder="Тема">
                 </div>
                 <div class="form-group col-md-12">
-                    <label for="messageForm">Сообщение</label>
-                    <textarea class="form-control" id="messageForm" placeholder="Сообщение" rows="10"></textarea>
+                    <label for="messageInput">Сообщение</label>
+                    <textarea class="form-control" id="messageInput" placeholder="Сообщение" rows="10"></textarea>
                 </div>
                 <div class="text-center">
                     <button type="submit" class="btn btn-primary btn-xl">Отправить</button>
@@ -254,6 +254,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+    <script src="js/mail.js"></script>
 </body>
 
 </html>
